--- a/Firmware/printer.cfg
+++ b/Firmware/printer.cfg
@@ -48,19 +48,20 @@ microsteps: 32
 full_steps_per_rotation: 200
 
 #comment the next line to switch to sensorless homing
-endstop_pin: head0:PB9
-#using the Endstop's GND and PB9 ports (2nd and 3rd pins from left respectively)
+endstop_pin: head0:PB8
+#using the Endstop's GND and PB8 pins (first two pins on the left on the PROBE 5-pin connector)
+#CAN V1.0 uses a different pinout, refer the manual if using it
 
 #uncomment the next line to switch to sensorless homing
 #endstop_pin: tmc2209_stepper_x:virtual_endstop
 #ADD the jumper to DIAG_0 if using the virtual endstop
 
-position_min: 4
-position_endstop: 166
-position_max: 167
+position_min: 10
+position_endstop: 165
+position_max: 166
 
 homing_speed:50
-homing_retract_dist: 0
+homing_retract_dist: 3
 second_homing_speed: 5
 homing_positive_dir: True
 [tmc2209 stepper_x]
@@ -91,18 +92,19 @@ microsteps: 32
 full_steps_per_rotation: 200
 
 #comment the next line to switch to sensorless homing
-endstop_pin: head1:PB9
-#using the Endstop's GND and PB9 ports (2nd and 3rd pins from left respectively)
+endstop_pin: head1:PB8
+#using the Endstop's GND and PB8 ports (first two pins on the left on the PROBE 5-pin connector)
+#CAN V1.0 uses a different pinout, refer the manual if using it
 
 #uncomment the next line to switch to sensorless homing
 #endstop_pin: tmc2209_dual_carriage:virtual_endstop
 
-position_min: -42
-position_endstop: -41
+position_min: -37.9
+position_endstop: -37.5
 position_max: 116
 
 homing_speed:50
-homing_retract_dist: 0
+homing_retract_dist: 3
 second_homing_speed: 5
 homing_positive_dir: False
 
@@ -139,7 +141,7 @@ endstop_pin: tmc2209_stepper_y:virtual_endstop
 
 position_min: 0
 position_endstop: 120
-position_max: 120
+position_max: 125
 
 homing_speed: 50  #Max 100
 homing_retract_dist: 0
@@ -154,7 +156,7 @@ sense_resistor: 0.110
 stealthchop_threshold: 250
 #set stealthchop to 0 if layer shifts occur
 diag_pin:^PG9
-driver_SGTHRS:050
+driver_SGTHRS:090
 #255=MAX sensivity for sensorless homing
 
 [stepper_y1]
@@ -469,7 +471,7 @@ z_positions:
 #   provided.
 
 points:
-    25, 5
+    30, 5
     100, 5
     70, 95
 
@@ -554,7 +556,7 @@ gcode:
 	G0 Z14
 	G0 Y60 F{F}
 	G0 X60 Y60 F{F}
-	G0 X-1 F{F}
+	G0 X-6 F{F}
 	G0 Y105 F{F}
 	G0 X20 F{F}
 	G0 X60 Y60 F{F}
@@ -579,7 +581,7 @@ gcode:
 	G0 Y60 F{F}
 	G0 X60 Y60 F{F}
 	G0 X20 Y105 F{F}
-	G0 X-1 F{F}
+	G0 X-6 F{F}
 	G0 Y90 F{F}
 	G0 X60 Y60 F{F}
 	
