--- a/Firmware/printer.cfg
+++ b/Firmware/printer.cfg
@@ -136,15 +136,18 @@ enable_pin: !PF15
 rotation_distance: 40
 microsteps: 32
 full_steps_per_rotation:200
-endstop_pin: tmc2209_stepper_y:virtual_endstop
-#ADD the jumper to DIAG_1
+endstop_pin: PG6
+#use Stop0 port (top left one)
 
-position_min: 0
+#endstop_pin: tmc2209_stepper_y:virtual_endstop
+#REMOVE the jumper to DIAG_1 unless you use sensorless homing
+
+position_min: -10
 position_endstop: 120
-position_max: 125
+position_max: 130
 
 homing_speed: 50  #Max 100
-homing_retract_dist: 0
+homing_retract_dist: 3
 second_homing_speed: 5
 homing_positive_dir: true
 
@@ -155,8 +158,10 @@ run_current: 0.45
 sense_resistor: 0.110
 stealthchop_threshold: 250
 #set stealthchop to 0 if layer shifts occur
-diag_pin:^PG9
-driver_SGTHRS:090
+
+#unclomment the next two lines if sensorless homing is used
+#diag_pin:^PG9
+#driver_SGTHRS:090
 #255=MAX sensivity for sensorless homing
 
 [stepper_y1]
@@ -358,15 +363,6 @@ gcode:
     {% set p = params.P|default(-1)|int %}
     M106 S0 P{p}
 	
-[save_variables]
-filename: ~/printer_data/config/variables.klip
-# this is used for saving and restoring the idex offsets
-# create the file and insert the following content (without the #) to start
-#
-# [Variables]
-# xoffset = 0.0
-# yoffset = 0.0
-# zoffset = 0.0
 
 ####################
 #### Bed heater ####
@@ -472,7 +468,7 @@ z_positions:
 
 points:
     30, 5
-    100, 5
+    110, 5
     70, 95
 
 speed: 25
@@ -557,7 +553,7 @@ gcode:
 	G0 Y60 F{F}
 	G0 X60 Y60 F{F}
 	G0 X-6 F{F}
-	G0 Y105 F{F}
+	G0 Y120 F{F}
 	G0 X20 F{F}
 	G0 X60 Y60 F{F}
     RESTORE_GCODE_STATE NAME=attach_probe_state
@@ -580,7 +576,7 @@ gcode:
 	G0 Z14
 	G0 Y60 F{F}
 	G0 X60 Y60 F{F}
-	G0 X20 Y105 F{F}
+	G0 X20 Y120 F{F}
 	G0 X-6 F{F}
 	G0 Y90 F{F}
 	G0 X60 Y60 F{F}
